--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -3,7 +3,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="head">
   <meta charset="UTF-8">
-  <title>MobiLeLeLe</title>
+  <title>SunPowa</title>
   <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
   <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
   <script th:src="@{/js/jquery.min.js}"></script>
