--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -9,7 +9,7 @@
         th:fragment="navbar"
         class="navbar navbar-expand-lg">
     <div class="container">
-        <a class="navbar-brand" href="#">SunPowa Systems</a>
+        <a class="navbar-brand" href="/">SunPowa Systems</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,10 +32,16 @@
                     <a class="nav-link" th:href="@{/support}">Support</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/login}">Login</a>
+                    <a class="nav-link" th:href="@{/users/login}">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/register}">Register</a>
+                    <a class="nav-link" th:href="@{/users/register}">Register</a>
+                </li>
+<!--                <li th:if="${@loggedUser.isLogged}">-->
+                <li>
+                    <form th:action="@{/users/logout}" th:method="POST">
+                        <input class="mybtn" type="submit" value="Logout" />
+                    </form>
                 </li>
             </ul>
         </div>
