--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <h2>Ready to Get Started?</h2>
             <p>Join us in the solar revolution today!</p>
-            <a href="#register" class="btn btn-primary">Register Now</a>
+            <a th:href="@{/register}" class="btn btn-primary">Register Now</a>
         </div>
     </section>
 
