--- a/src/main/resources/templates/auth-register.html
+++ b/src/main/resources/templates/auth-register.html
@@ -12,36 +12,31 @@
 </div>
 
 
-<!--<section id="register">-->
-<!--    <div class="container">-->
-<!--        <h2>Register</h2>-->
-<!--        <p>This is the Register page content. Include your registration form or sign-up instructions here.</p>-->
-<!--    </div>-->
-<!--</section>-->
-
 
 <div class="container">
     <h2>Register</h2>
-    <form>
+    <form th:action="@{/users/register}"
+          th:method="post">
+
         <div class="form-group">
             <label for="firstName">First Name:</label>
-            <input type="text" class="form-control" id="firstName" placeholder="Enter first name">
+            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter first name">
         </div>
         <div class="form-group">
             <label for="lastName">Last Name:</label>
-            <input type="text" class="form-control" id="lastName" placeholder="Enter last name">
+            <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Enter last name">
         </div>
         <div class="form-group">
             <label for="email">Email:</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter email">
+            <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" class="form-control" id="password" placeholder="Enter password">
+            <input type="password" class="form-control" id="password" name="password" placeholder="Enter password">
         </div>
         <div class="form-group">
             <label for="confirmPassword">Confirm Password:</label>
-            <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm password">
+            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm password">
         </div>
         <button type="submit" class="btn btn-primary">Register</button>
     </form>
