--- a/src/main/resources/templates/auth-login.html
+++ b/src/main/resources/templates/auth-login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:sec="http://www.thymeleaf.org/">
+<html lang="en">
 
 <head th:replace="~{fragments/head}">
 </head>
@@ -14,19 +13,34 @@
     <section id="login" >
         <div class="container">
             <h2>Login</h2>
-            <form>
+            <form th:method="post"
+                  th:action="@{/users/login}">
                 <div class="form-group">
-                    <label for="username">Username:</label>
-                    <input type="text" class="form-control " id="username" placeholder="Enter username">
+                    <label for="email">Username:</label>
+                    <input id="email"
+                           name="email"
+                           th:value="${email}"
+                           type="text"
+                           class="form-control"
+                           placeholder="Email"/>
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
-                    <input type="password" class="form-control" id="password" placeholder="Enter password">
+                    <input id="password"
+                           name="password"
+                           type="password" min="2"
+                           max="20" class="form-control"
+                           placeholder="Password"/>
                 </div>
                 <div class="form-group form-check">
                     <input type="checkbox" class="form-check-input" id="stayLogged">
                     <label class="form-check-label" for="stayLogged">Stay logged in</label>
                 </div>
+
+                <p th:if="${bad_credentials}" class="errors alert alert-danger">
+                    Invalid username or password.
+                </p>
+
                 <button type="submit" class="btn btn-primary">Login</button>
             </form>
         </div>
