--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -40,7 +40,7 @@
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <div class="form-inline my-2 my-lg-0 border px-3">
                         <div class="logged-user">
-                            Welcome, <th:block sec:authentication="name"></th:block>!
+                           <th:block sec:authentication="name"></th:block>!
                         </div>
                         <form th:method="post"
                               th:action="@{/users/logout}">
@@ -50,7 +50,7 @@
                 </li>
             </ul>
         </div>
-    </nav>
+     </nav>
 
 
 </body>
