--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -4,6 +4,7 @@
 <head th:fragment="head">
   <meta charset="UTF-8">
   <title>SunPowa</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
   <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
   <script th:src="@{/js/jquery.min.js}"></script>
