--- a/src/main/resources/templates/products-reg.html
+++ b/src/main/resources/templates/products-reg.html
@@ -16,6 +16,12 @@
             <h2>Product Registration</h2>
             <p>This is the Product Registration page content. Include your registration form or instructions here.</p>
         </div>
+
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            <a th:href="@{/add_product}" class="btn btn-primary">Add</a>
+        </button>
+
     </section>
 
     <div>
