--- a/src/main/resources/templates/auth-login.html
+++ b/src/main/resources/templates/auth-login.html
@@ -10,39 +10,42 @@
     <nav th:replace="~{fragments/navbar}"></nav>
 </div>
 
-    <section id="login" >
-        <div class="container">
-            <h2>Login</h2>
-            <form th:method="post"
-                  th:action="@{/users/login}">
-                <div class="form-group">
-                    <label for="email">Username:</label>
-                    <input id="email"
-                           name="email"
-                           th:value="${email}"
-                           type="text"
-                           class="form-control"
-                           placeholder="Email"/>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input id="password"
-                           name="password"
-                           type="password" min="2"
-                           max="20" class="form-control"
-                           placeholder="Password"/>
-                </div>
-                <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="stayLogged">
-                    <label class="form-check-label" for="stayLogged">Stay logged in</label>
-                </div>
+    <section id="login">
+        <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+            <div class="container h-100">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                        <div class="card" style="border-radius: 15px;">
+                            <div class="card-body p-5">
+                                <h2>Login</h2>
 
-                <p th:if="${bad_credentials}" class="errors alert alert-danger">
-                    Invalid username or password.
-                </p>
+                                <form th:method="post"
+                                    th:action="@{/users/login}">
 
-                <button type="submit" class="btn btn-primary">Login</button>
-            </form>
+                                    <div class="form-outline mb-4">
+                                        <input type="email" id="email" name="email" class="form-control form-control-lg"/>
+                                        <label class="form-label" for="email">Username</label>
+                                    </div>
+
+                                    <div class="form-outline mb-4">
+                                        <input type="password" id="password" name="password"
+                                               class="form-control form-control-lg"/>
+                                        <label class="form-label" for="password">Password</label>
+                                    </div>
+
+                                    <div class="d-flex justify-content-center">
+                                        <button type="submit"
+                                                class="btn-primary">Login
+                                        </button>
+                                    </div>
+
+                                </form>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
