--- a/src/main/resources/templates/auth-register.html
+++ b/src/main/resources/templates/auth-register.html
@@ -11,51 +11,71 @@
     <nav th:replace="~{fragments/navbar}"></nav>
 </div>
 
+<section id="register">
+<div class="mask d-flex align-items-center h-100 gradient-custom-3">
+    <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                <div class="card" style="border-radius: 15px;">
+                    <div class="card-body p-5">
+                        <h2 class="text-align-center">Register</h2>
+
+                        <form th:action="@{/users/register}"
+                              th:method="post">
+
+                            <div class="form-outline mb-4">
+                                <input type="text" id="firstName" name="firstName"
+                                       class="form-control form-control-lg"/>
+                                <label class="form-label" for="firstName">First Name</label>
+                            </div>
+                            <div class="form-outline mb-4">
+                                <input type="text" id="lastName" name="lastName" class="form-control form-control-lg"/>
+                                <label class="form-label" for="lastName">Last Name</label>
+                            </div>
 
 
-<div class="container">
-    <h2>Register</h2>
-    <form th:action="@{/users/register}"
-          th:method="post">
+                            <div class="form-outline mb-4">
+                                <input type="email" id="email" name="email" class="form-control form-control-lg"/>
+                                <label class="form-label" for="email">Your Email</label>
+                            </div>
 
-        <div class="form-group">
-            <label for="firstName">First Name:</label>
-            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First name">
-            <p class="errors alert alert-danger">
-                First name is required.
-            </p>
+                            <div class="form-outline mb-4">
+                                <input type="password" id="password" name="password"
+                                       class="form-control form-control-lg"/>
+                                <label class="form-label" for="password">Password</label>
+                            </div>
+
+                            <div class="form-outline mb-4">
+                                <input type="password" id="confirmPassword" name="confirmPassword"
+                                       class="form-control form-control-lg"/>
+                                <label class="form-label" for="confirmPassword">Repeat your password</label>
+                            </div>
+
+                            <!--                            <div class="form-check d-flex justify-content-center mb-5">-->
+                            <!--                                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />-->
+                            <!--                                <label class="form-check-label" for="form2Example3g">-->
+                            <!--                                    I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>-->
+                            <!--                                </label>-->
+                            <!--                            </div>-->
+
+                            <div class="d-flex justify-content-center">
+                                <button type="submit"
+                                        class="btn-primary">Register
+                                </button>
+                            </div>
+
+                            <!--                            <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!"-->
+                            <!--                                                                                                    class="fw-bold text-body"><u>Login here</u></a></p>-->
+
+                        </form>
+
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="lastName">Last Name:</label>
-            <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last name">
-            <p class="errors alert alert-danger">
-                Last name is required.
-            </p>
-        </div>
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-            <p class="errors alert alert-danger">
-                Email is required.
-            </p>
-        </div>
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-            <p class="errors alert alert-danger">
-                Password is required.
-            </p>
-        </div>
-        <div class="form-group">
-            <label for="confirmPassword">Confirm Password:</label>
-            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Password">
-            <p class="errors alert alert-danger">
-                Password confirmation is required.
-            </p>
-        </div>
-        <button type="submit" class="btn btn-primary">Register</button>
-    </form>
+    </div>
 </div>
+</section>
 
 
 <div>
