--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
   <script th:src="@{/js/jquery.min.js}"></script>
   <script th:src="@{/js/bootstrap.min.js}"></script>
+  <script th:src="@{/js/popper.min.js}"></script>
 </head>
 <body>
 
