Add product functionality from the Admin menu

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -42,7 +42,7 @@
                         Admin
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Add product</a>
+                        <a class="dropdown-item" href="/product/add">Add product</a>
                         <a class="dropdown-item" href="#">Add user</a>
                         <a class="dropdown-item" href="#">Edit profile</a>
                     </div>
