--- a/src/main/resources/templates/product-add.html
+++ b/src/main/resources/templates/product-add.html
@@ -1,27 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org">
 
 <head th:replace="~{fragments/head}">
-<!--    <meta charset="UTF-8">-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-<!--    <title>Add Product - SunPowa</title>-->
-<!--    &lt;!&ndash; Bootstrap CSS &ndash;&gt;-->
-<!--    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">-->
-<!--    <style>-->
-<!--        body {-->
-<!--            padding-top: 50px;-->
-<!--            background-color: #f5f5f5;-->
-<!--        }-->
-
-<!--        .form-container {-->
-<!--            max-width: 500px;-->
-<!--            margin: 0 auto;-->
-<!--            padding: 20px;-->
-<!--            border: 1px solid #ccc;-->
-<!--            border-radius: 5px;-->
-<!--            background-color: #fff;-->
-<!--        }-->
-<!--    </style>-->
 </head>
 
 <body>
@@ -31,28 +11,35 @@
 <div class="container">
     <div class="form-container">
         <h2 class="text-center mb-4">Add Product</h2>
-        <form>
+        <form th:method="POST"
+              th:action="@{/product/add}"
+              th:object="${addProductDTO}">
             <div class="form-group">
-                <label for="brand">Brand:</label>
-                <select class="form-control" id="brand">
-                    <option>Select Brand</option>
-                    <option>Brand A</option>
-                    <option>Brand B</option>
-                    <option>Brand C</option>
+                <label for="brandId">Brand:</label>
+                <select class="form-control"
+                        id="brandId"
+                        th:name="brandId">
+                    <option
+                        th:each="brand: ${brands}"
+                        th:label="${brand.name() + ' ' + brand.model()}"
+                        th:value="${brand.id}"
+                        th:selected="*{brandId} == ${brand.id}">
+                        Select Brand
+                    </option>
                     <!-- Add more options as needed -->
                 </select>
             </div>
             <div class="form-group">
                 <label for="description">Description:</label>
-                <textarea class="form-control" id="description" rows="3" placeholder="Enter description"></textarea>
+                <textarea class="form-control" id="description" th:field="*{description}"  rows="3" placeholder="Enter description"></textarea>
             </div>
             <div class="form-group">
                 <label for="imageUrl">Image URL:</label>
-                <input type="text" class="form-control" id="imageUrl" placeholder="Enter image URL">
+                <input type="text" class="form-control" id="imageUrl" th:field="*{imageUrl}" placeholder="Enter image URL">
             </div>
             <div class="form-group">
                 <label for="price">Price:</label>
-                <input type="number" class="form-control" id="price" placeholder="Enter price">
+                <input type="number" class="form-control" id="price" th:field="*{price}" placeholder="Enter price">
             </div>
             <button type="submit" class="btn btn-primary btn-block">Add</button>
         </form>
@@ -63,10 +50,6 @@
     <nav th:replace="~{fragments/footer}"></nav>
 </div>
 
-<!-- Bootstrap JS and jQuery -->
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>-->
-<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>-->
 </body>
 
 </html>
