--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -44,8 +44,9 @@
             </div>
 
             <button class="btn-primary" th:name="uuid" th:value="${product.id}">
-               <a th:href="@{/product/{productUUID}(productUUID=*{id})}"> BUY</a>
+               <a th:href="@{/product/{productUUID}(productUUID=*{id})}"> Details</a>
             </button>
+
 
         </div>
 
