--- a/src/main/resources/templates/product-details.html
+++ b/src/main/resources/templates/product-details.html
@@ -35,6 +35,12 @@
 
                 </li>
             </ul>
+            <div class="card-body" sec:authorize="hasRole('ADMIN')">
+                <form th:method="delete"
+                      th:action="@{/product/{productUUID}(productUUID=*{id})}">
+                    <input type="submit" value="Delete" class="link card-link"/>
+                </form>
+            </div>
 
         </div>
         <div class="offer card col-sm-2 col-md-3  col-lg-4 m-1 p-0">
@@ -49,5 +55,7 @@
 <div>
     <nav th:replace="~{fragments/footer}"></nav>
 </div>
+
+
 </body>
 </html>
