--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,33 +6,82 @@
 </head>
 
 <body>
-    <div>
-        <nav th:replace="~{fragments/navbar}"></nav>
-    </div>
+<div>
+    <nav th:replace="~{fragments/navbar}"></nav>
+</div>
 
-    <div class="container-fluid">
-        <h5 class="text-center text-black mt-5">
-            Welcome to SunPowa,
-            <th:block sec:authorize="isAuthenticated()">
-                <th:block sec:authentication="name"></th:block>
-            </th:block>
-            <th:block sec:authorize="!isAuthenticated()" >
-                Anonymous!
-                </th:block>
-        </h5>
-    </div>
+<div class="container-fluid">
+    <h5 class="text-center text-black mt-5">
+        Welcome to SunPowa,
+        <th:block sec:authorize="isAuthenticated()">
+            <th:block sec:authentication="name"></th:block>
+        </th:block>
+        <th:block sec:authorize="!isAuthenticated()">
+            Anonymous!
+        </th:block>
+    </h5>
+</div>
 
-    <section class="call-to-action">
-        <div class="container">
-            <h2>Ready to Get Started?</h2>
-            <p>Join us in the solar revolution today!</p>
-            <a th:href="@{/users/register}" class="btn btn-primary">Register Now</a>
+
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
+            <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.PE9UWUHYz2r09tMn_SauBwAAAA%26pid%3DApi&f=1&ipt=9438e248a96499279a0108f0a37e22a044a4a1fad189e0cb0f8682022d5dd576&ipo=images"
+                             class="w-100" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First Section</h5>
+                            <p>Description for the first section.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.PE9UWUHYz2r09tMn_SauBwAAAA%26pid%3DApi&f=1&ipt=9438e248a96499279a0108f0a37e22a044a4a1fad189e0cb0f8682022d5dd576&ipo=images"
+                             class="w-100" alt="Second slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second Section</h5>
+                            <p>Description for the second section.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.PE9UWUHYz2r09tMn_SauBwAAAA%26pid%3DApi&f=1&ipt=9438e248a96499279a0108f0a37e22a044a4a1fad189e0cb0f8682022d5dd576&ipo=images"
+                             class="w-100" alt="Third slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third Section</h5>
+                            <p>Description for the third section.</p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
-    </section>
-
-    <div>
-        <nav th:replace="~{fragments/footer}"></nav>
     </div>
+</div>
+
+            <section class="call-to-action">
+                <div class="container">
+                    <h2>Ready to Get Started?</h2>
+                    <p>Join us in the solar revolution today!</p>
+                    <a th:href="@{/users/register}" class="btn btn-primary">Register Now</a>
+                </div>
+            </section>
+
+            <div>
+                <nav th:replace="~{fragments/footer}"></nav>
+            </div>
 
 </body>
 
