--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
 
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-lg-8">
+        <div class="col-lg-6">
             <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -35,7 +35,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.PE9UWUHYz2r09tMn_SauBwAAAA%26pid%3DApi&f=1&ipt=9438e248a96499279a0108f0a37e22a044a4a1fad189e0cb0f8682022d5dd576&ipo=images"
-                             class="w-100" alt="First slide">
+                             class="d-block w-100 img-fluid" alt="First slide">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>First Section</h5>
                             <p>Description for the first section.</p>
@@ -43,7 +43,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.PE9UWUHYz2r09tMn_SauBwAAAA%26pid%3DApi&f=1&ipt=9438e248a96499279a0108f0a37e22a044a4a1fad189e0cb0f8682022d5dd576&ipo=images"
-                             class="w-100" alt="Second slide">
+                             class="d-block w-100 img-fluid" alt="Second slide">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Second Section</h5>
                             <p>Description for the second section.</p>
@@ -51,7 +51,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.PE9UWUHYz2r09tMn_SauBwAAAA%26pid%3DApi&f=1&ipt=9438e248a96499279a0108f0a37e22a044a4a1fad189e0cb0f8682022d5dd576&ipo=images"
-                             class="w-100" alt="Third slide">
+                             class="d-block w-100 img-fluid" alt="Third slide">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Third Section</h5>
                             <p>Description for the third section.</p>
@@ -59,11 +59,11 @@
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="carousel-control-prev-icon" aria-hidden="false"></span>
                     <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="carousel-control-next-icon" aria-hidden="false"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
