--- a/src/main/resources/templates/auth-login.html
+++ b/src/main/resources/templates/auth-login.html
@@ -28,10 +28,22 @@
                                     </div>
 
                                     <div class="form-outline mb-4">
-                                        <input type="password" id="password" name="password"
+                                        <input id="password" name="password" type="password" min="2" max="20"
                                                class="form-control form-control-lg"/>
                                         <label class="form-label" for="password">Password</label>
                                     </div>
+
+
+
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" id="rememberme" name="rememberme">
+                                        <label class="form-check-label" for="rememberme">Remember me</label>
+                                    </div>
+
+                                    <p th:if="${bad_credentials}" class="errors alert alert-danger">
+                                        Invalid username or password.
+                                    </p>
+
 
                                     <div class="d-flex justify-content-center">
                                         <button type="submit"
