--- a/src/main/resources/templates/auth-register.html
+++ b/src/main/resources/templates/auth-register.html
@@ -21,34 +21,46 @@
                         <h2 class="text-align-center">Register</h2>
 
                         <form th:action="@{/users/register}"
-                              th:method="post">
+                              th:method="post"
+                              th:object="${userRegistrationDTO}">
 
                             <div class="form-outline mb-4">
-                                <input type="text" id="firstName" name="firstName"
-                                       class="form-control form-control-lg"/>
                                 <label class="form-label" for="firstName">First Name</label>
+                                <input type="text" id="firstName" name="firstName" th:field="*{firstName}" th:errorclass="bg-danger"
+                                       class="form-control form-control-lg"/>
+                                <small th:if="${#fields.hasErrors('firstName')}"
+                                       th:errors="*{firstName}" class="text-danger"></small>
                             </div>
                             <div class="form-outline mb-4">
-                                <input type="text" id="lastName" name="lastName" class="form-control form-control-lg"/>
                                 <label class="form-label" for="lastName">Last Name</label>
+                                <input type="text" id="lastName" name="lastName" th:field="*{lastName}" th:errorclass="bg-danger" class="form-control form-control-lg"/>
+                                <small th:if="${#fields.hasErrors('lastName')}"
+                                       th:errors="*{lastName}" class="text-danger"></small>
                             </div>
 
 
                             <div class="form-outline mb-4">
-                                <input type="email" id="email" name="email" class="form-control form-control-lg"/>
                                 <label class="form-label" for="email">Your Email</label>
+                                <input type="email" id="email" name="email" th:field="*{email}" th:errorclass="bg-danger" class="form-control form-control-lg"/>
+                                <small th:if="${#fields.hasErrors('email')}"
+                                       th:errors="*{email}" class="text-danger">Email error
+                                    message</small>
                             </div>
 
                             <div class="form-outline mb-4">
-                                <input type="password" id="password" name="password"
-                                       class="form-control form-control-lg"/>
                                 <label class="form-label" for="password">Password</label>
+                                <input type="password" id="password" name="password" th:field="*{password}"  th:errorclass="bg-danger"
+                                       class="form-control form-control-lg"/>
+                                <small th:if="${#fields.hasErrors('password')}"
+                                       th:errors="*{password}" class="text-danger"></small>
                             </div>
 
                             <div class="form-outline mb-4">
-                                <input type="password" id="confirmPassword" name="confirmPassword"
+                                <label class="form-label" for="confirmPassword">Confirm Password</label>
+                                <input type="password" id="confirmPassword" name="confirmPassword" th:field="*{confirmPassword}" th:errorclass="bg-danger"
                                        class="form-control form-control-lg"/>
-                                <label class="form-label" for="confirmPassword">Repeat your password</label>
+                                <small th:if="${#fields.hasErrors('confirmPassword')}"
+                                       th:errors="*{confirmPassword}" class="text-danger"></small>
                             </div>
 
                             <div class="d-flex justify-content-center">
