--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -43,7 +43,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/product/add">Add product</a>
-                        <a class="dropdown-item" href="#">Add user</a>
+                        <a class="dropdown-item" href="/roles/management">User role management</a>
                         <a class="dropdown-item" href="#">Edit profile</a>
                     </div>
                 </li>
