--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -44,7 +44,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/product/add">Add product</a>
                         <a class="dropdown-item" href="/roles/management">User role management</a>
-                        <a class="dropdown-item" href="#">Edit profile</a>
+                        <a class="dropdown-item" href="/profile/edit_profile">Edit profile</a>
                     </div>
                 </li>
 
@@ -54,8 +54,8 @@
                         Profile
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Register product</a>
-                        <a class="dropdown-item" href="#">Edit profile</a>
+<!--                        <a class="dropdown-item" href="#">Register product</a>-->
+                        <a class="dropdown-item" href="/profile/edit_profile">Edit profile</a>
 <!--                        <a class="dropdown-item" href="#">Other</a>-->
                     </div>
                 </li>
