--- a/src/main/resources/templates/product-add.html
+++ b/src/main/resources/templates/product-add.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:sec="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="~{fragments/head}">
 </head>
@@ -12,7 +12,8 @@
     <div class="form-container">
         <h2 class="text-center mb-4">Add Product</h2>
         <form th:method="POST"
-              th:action="@{/product/add}">
+              th:action="@{/product/add}"
+              th:object="${addProductDTO}">
             <div class="form-group">
                 <label for="brandId">Brand:</label>
                 <select class="form-control"
@@ -25,19 +26,32 @@
                         th:selected="brandId == ${brand.id}">
                         Select Brand
                     </option>
+
                 </select>
             </div>
             <div class="form-group">
                 <label for="description">Description:</label>
-                <textarea class="form-control" id="description" name="description"  rows="3" placeholder="Enter description"></textarea>
+                <textarea class="form-control" id="description" name="description"
+                          th:field="*{description}" th:errorclass="bg-danger"
+                          rows="3" placeholder="Enter description"></textarea>
+                <small th:if="${#fields.hasErrors('description')}"
+                       th:errors="*{description}" class="text-danger"></small>
             </div>
             <div class="form-group">
                 <label for="imageUrl">Image URL:</label>
-                <input type="text" class="form-control" id="imageUrl" name="imageUrl" placeholder="Enter image URL">
+                <input type="text" class="form-control" id="imageUrl" name="imageUrl"
+                       th:field="*{imageUrl}" th:errorclass="bg-danger"
+                       placeholder="Enter image URL">
+                <small th:if="${#fields.hasErrors('imageUrl')}"
+                       th:errors="*{imageUrl}" class="text-danger"></small>
             </div>
             <div class="form-group">
                 <label for="price">Price:</label>
-                <input type="number" class="form-control" id="price" name="price" placeholder="Enter price">
+                <input type="number" class="form-control" id="price" name="price"
+                       th:field="*{price}" th:errorclass="bg-danger"
+                       placeholder="Enter price">
+                <small th:if="${#fields.hasErrors('price')}"
+                       th:errors="*{price}" class="text-danger"></small>
             </div>
             <button type="submit" class="btn btn-primary btn-block">Add</button>
         </form>
