--- a/src/main/resources/templates/auth-login.html
+++ b/src/main/resources/templates/auth-login.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 
 <head th:replace="~{fragments/head}">
 </head>
