--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+      xmlns:th="http://www.thymeleaf.org/">
 
 <head th:replace="~{fragments/head}">
 </head>
@@ -10,7 +10,7 @@
     <nav th:replace="~{fragments/navbar}"></nav>
 </div>
 
-<div sec:authorize="!hasRole('ADMIN')">
+<div>
     <h2>Bought Products</h2>
 
     <ul>
@@ -21,9 +21,9 @@
 
 <div>
     <h2>Change Username (Email)</h2>
-    <form action="/changeEmail" method="post">
+    <form th:method="POST" th:action="@{/profile/edit_profile}" th:object="${userChangeProfileDTO}">
         <label for="newEmail">New Email:</label>
-        <input type="email" id="newEmail" name="newEmail" required>
+        <input type="email" id="newEmail" name="newEmail" th:field="*{newEmail}">
         <button type="submit">Change Email</button>
     </form>
 </div>
