--- a/src/main/resources/templates/user-role-management.html
+++ b/src/main/resources/templates/user-role-management.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="~{fragments/head}">
 </head>
 
-<body>
+<body sec:authorize="hasRole('MASTER')">
 
 <nav th:replace="~{fragments/navbar}"></nav>
 
