Added new role, change roles - functionality, change/edit usernames(email) functionality

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -190,4 +190,14 @@ p#support {
     object-fit: cover;
 }
 
+#deleteProduct {
+           position: absolute;
+           bottom: 0;
+           left: 0;
+           width: 100%;
+           text-align: center;
+           padding: 10px;
+
+}
+
 
