--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,7 +71,7 @@
     </div>
 </div>
 
-            <section class="call-to-action">
+            <section class="call-to-action" sec:authorize="!isAuthenticated()">
                 <div class="container">
                     <h2>Ready to Get Started?</h2>
                     <p>Join us in the solar revolution today!</p>
