--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -47,7 +47,30 @@
                <a  th:href="@{/product/{productUUID}(productUUID=*{id})}"> Details</a>
             </button>
 
+        </div>
 
+        <div class="container mt-5">
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
+
+
+                    <li class="page-item" th:classappend="${products.isFirst() ? 'disabled' : ''}">
+                        <a th:if="${products.isFirst()}" class="page-link" href="#" aria-label="First"><span aria-hidden="true">&laquo;</span></a>
+                        <a th:unless="${products.isFirst()}" class="page-link" th:href="@{/products/all(size=${products.getSize()})}" aria-label="First"><span aria-hidden="true">&laquo;</span></a>
+                    </li>
+
+
+                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+
+
+                    <li class="page-item" th:classappend="${products.isLast() ? 'disabled' : ''}">
+                        <a th:if="${products.isLast()}" class="page-link" href="#" aria-label="Last"><span aria-hidden="true">&raquo;</span></a>
+                        <a th:unless="${products.isLast()}" class="page-link" th:href="@{/products/all(size=${products.getSize()}, page=${products.getTotalPages() - 1})}" aria-label="Last"><span aria-hidden="true">&raquo;</span></a>
+                    </li>
+
+                </ul>
+            </nav>
         </div>
 
     </div>
